# pixel-hero

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.rs
.github/workflows/: main.yml
example/: index.html  index.js  package-lock.json  package.json
i18n/: messages-en.toml  messages-zh_CN.toml
src/: conf.rs  i18n.rs  init.rs  lib.rs  log.rs
src/emulator/: apu.rs  bus.rs  controller.rs  cpu.rs  emulator.rs  instruction.rs  memory.rs  mirroring.rs  mod.rs  palette.rs  ppu.rs  ppu_registers.rs  registers.rs  renderer.rs
src/emulator/instruction/: instruction.rs  instruction_set.rs  mod.rs
src/emulator/ppu/: mod.rs  palette.rs  ppu.rs  renderer.rs
src/rom/: mapper.rs  mod.rs  rom.rs  slice.rs  timing.rs
src/rom/mappers/: mapper003.rs  mod.rs
tests/: index.js
